@startuml
hide circle
skinparam classAttributeIconSize 0
class ExpiryDate {
    +ExpiryDate(dateString: String)
}

class DishDate {
}

abstract class Food <<abstract>> {
    - String name
    + Food(name: String)
    + abstract void displayInfo()
    + String getName(): String
    + String toString(): String
}

class Ingredient {
    - ExpiryDate expiryDate
    - int quantity
    - String name
    - boolean expiringSoon
    - boolean expired
    - void expired(): void
    - void expiringSoon(): void
    + Ingredient(name: String)
    + Ingredient(name: String, quantity: int)
    + Ingredient(name: String, expiry: String, quantity: int)
    + void setQuantity(quantity: int): void
    + int getQuantity(): int
    + ExpiryDate getExpiryDate(): ExpiryDate
    + String getName(): String
    + void addQuantity(quantity: int): void
    + void removeQuantity(quantity: int): void
    + void setExpiringSoon(b: boolean): void
    + void setExpired(b: boolean): void
    + void setExpiryDate(expiryDate: ExpiryDate): void
    + void displayInfo(): void
    + String toString(): String
}

class IngredientStorage {
    - HashMap<String, List<Ingredient>> ingredients
    + void initializeIngredientStorage(HashMap<String, List<Ingredient>> newIngredients): void
    + void addToStorage(Ingredient newIngredient): void
    + void removeIngredient(String ingredientName): void
    + HashMap<String, List<Ingredient>> getStorage(): HashMap<String, List<Ingredient>>
    + boolean contains(String ingredientName): boolean
    + void clear(): void
    + void displayStorage(): void
    + List<Ingredient> getIngredients(String name): List<Ingredient>
    - void checkExpiringSoon(String name): void
    - void checkExpiredIngredients(String name): void
    - void removeExpiredIngredients(String name): void
    + void useIngredients(String name, int amount): void
    + int getUnexpiredIngredients(String ingredientName): int
    + int getExpiringSoonIngredients(String ingredientName): int
    + int getTotalIngredientQuantity(Ingredient ingredient): int
    + void updateIngredient(String name, String oldExpiry, int newQuantity, String newExpiry): void
    + void printMap(): void
}

ExpiryDate --|> DishDate
Ingredient --|> Food
Ingredient *--> "1" ExpiryDate
IngredientStorage "1" --> "*" Ingredient : works on


@enduml
